# NetworkedPoker

./: .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/shader/: default.frag  default.vert
client/src/: glad.c  main.cpp
client/src/game/: components.h  core.cpp  core.h  game.h
client/src/render/: renderer.h
common/: game.h  network.h
common/game/: game.h
common/network/: network.h
server/: CMakeLists.txt
server/src/: main.cpp  server_types.h
